<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">order summary</string>
    <string name="order">Order</string>
    <string name="price">Price</string>
    <string name="thank_you">Thank you!</string>

    <string name="order_summary_chocolate">Add chocolate? <xliff:g example="true" id="addChocolate">%b</xliff:g></string>
    <string name="order_summary_cream">Add whipped cream? <xliff:g id="addWhippedCream">%b</xliff:g> </string>
    <string name="order_summary_quantity">Quantity:  <xliff:g id="quantity">%d</xliff:g> </string>
    <string name="order_summary_total"> Total: <xliff:g id="price">%s</xliff:g></string>
    <string name="order_summary_name"> Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="email_title">Just Java order for <xliff:g id="name">%s</xliff:g> </string>
    <string name="error_max_orders">You cannot have more than 100 coffees</string>
    <string name="error_min_order">You cannot have less than 1 coffee</string>


</resources>